--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -76,7 +76,7 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
-      "└ @ PATHSolver C:\\Users\\david\\.julia\\packages\\PATHSolver\\fB6ZO\\src\\C_API.jl:517\n"
+      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
      ]
     },
     {
@@ -130,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
-      "└ @ PATHSolver C:\\Users\\david\\.julia\\packages\\PATHSolver\\fB6ZO\\src\\C_API.jl:517\n"
+      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
      ]
     },
     {
@@ -169,6 +169,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
+      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MPSGE model with 3 sectors, 5 commodities and 1 consumers.\n",
+       "  Sectors: X (bm=1.0), Y (bm=1.0), U (bm=1.0)\n",
+       "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
+       "  Consumers: RA (bm=150.0)\n",
+       "Solution:\n",
+       "  X:\t1.0488088481874933\n",
+       "  Y:\t1.0388601182572055\n",
+       "  U:\t1.0454820635823239\n",
+       "  PX:\t1.0\n",
+       "  PY:\t1.0095765827762653\n",
+       "  PU:\t1.0031820580255566\n",
+       "  PL:\t0.953462589239053\n",
+       "  PK:\t1.0488088481827003\n",
+       "  PLPX:\t52.44044240795571\n",
+       "  PKPX:\t47.6731294613633\n",
+       "  PLPY:\t21.177057058092682\n",
+       "  PKPY:\t28.87780507930972\n",
+       "  PXPU:\t100.31820580255416\n",
+       "  PYPU:\t49.68330660298509\n",
+       "  RA:\t157.3213272260231\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MPSGE.set_fixed!(m, :PX, true)\n",
+    "solve!(m)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +242,7 @@
        "\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n",
        "\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n",
        "\\quad && \\perp \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n",
-       "\\quad && \\perp \\quad && 0.001 <PX\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
+       "\\quad && \\perp \\quad && 1.0 <PX1.0 < \\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
        "\\quad && \\perp \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n",
        "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter_{1}))\n",
        "\\quad && \\perp \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))\n",
@@ -213,7 +261,7 @@
        "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                       ┴  0.0 < X\n",
        "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                        ┴  0.0 < Y\n",
        "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                       ┴  0.0 < U\n",
-       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  0.001 < PX\n",
+       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  1.0 < PX1.0 < \n",
        "  (+(PYPU * U) + 0.0) - 50.0 * Y                                             ┴  0.001 < PY\n",
        "  (0.0 + +(RA / PU)) - 150.0 * U                                             ┴  0.001 < PU\n",
        "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter[1]))             ┴  0.001 < PL\n",
@@ -221,7 +269,7 @@
        "  ((70.0 * parameter[1]) * PL + 80.0 * PK) - RA                              ┴  RA\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
