--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -72,11 +72,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
-      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_83DB.tmp\n",
+      " > cumulative_iteration_limit 0\n",
+      "Read of options file complete.\n",
+      "\n",
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
+      "\n",
+      "Major Iteration Log\n",
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
+      "    0     0     1     1 0.0000e+00           I 0.0e+00 0.0e+00 (F_X)\n",
+      "\n",
+      "Major Iterations. . . . 0\n",
+      "Minor Iterations. . . . 0\n",
+      "Restarts. . . . . . . . 0\n",
+      "Crash Iterations. . . . 0\n",
+      "Gradient Steps. . . . . 0\n",
+      "Function Evaluations. . 1\n",
+      "Gradient Evaluations. . 1\n",
+      "Basis Time. . . . . . . 0.000000\n",
+      "Total Time. . . . . . . 0.047000\n",
+      "Residual. . . . . . . . 0.000000e+00\n"
      ]
     },
     {
@@ -126,11 +145,34 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
-      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
+      "\n",
+      "Crash Log\n",
+      "major  func  diff  size  residual    step       prox   (label)\n",
+      "    0     0             1.4828e+01             0.0e+00 (F_PL)\n",
+      "    1     1     0    15 6.0442e-01  1.0e+00    0.0e+00 (F_PU)\n",
+      "pn_search terminated: no basis change.\n",
+      "\n",
+      "Major Iteration Log\n",
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
+      "    0     0     2     2 6.0442e-01           I 0.0e+00 4.1e-01 (F_PU)\n",
+      "    1     1     3     3 3.7495e-04  1.0e+00 SO 0.0e+00 3.0e-04 (F_PK)\n",
+      "    2     1     4     4 1.9274e-08  1.0e+00 SO 0.0e+00 1.3e-08 (F_PLPX)\n",
+      "\n",
+      "Major Iterations. . . . 2\n",
+      "Minor Iterations. . . . 2\n",
+      "Restarts. . . . . . . . 0\n",
+      "Crash Iterations. . . . 1\n",
+      "Gradient Steps. . . . . 0\n",
+      "Function Evaluations. . 4\n",
+      "Gradient Evaluations. . 4\n",
+      "Basis Time. . . . . . . 0.000000\n",
+      "Total Time. . . . . . . 0.000000\n",
+      "Residual. . . . . . . . 1.927418e-08\n"
      ]
     },
     {
@@ -169,16 +211,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now fix the `PX` variable at its benchmark value:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ Warning: Disabling output because PATH.jl does not support writing to this `stdout`. Are you using Atom-Hydrogen or Jupyter? See: https://github.com/odow/PATH.jl/issues/10.\n",
-      "└ @ PATHSolver C:\\Users\\david\\.julia\\dev\\PATHSolver\\src\\C_API.jl:517\n"
+      "Path 5.0.03 (Fri Jun 26 10:05:33 2020)\n",
+      "Written by Todd Munson, Steven Dirkse, Youngdae Kim, and Michael Ferris\n",
+      "Preprocessed size   : 14\n",
+      "\n",
+      "Crash Log\n",
+      "major  func  diff  size  residual    step       prox   (label)\n",
+      "    0     0             1.4828e+01             0.0e+00 (F_PL)\n",
+      "    1     1     0    14 4.0345e-01  1.0e+00    0.0e+00 (F_X)\n",
+      "pn_search terminated: no basis change.\n",
+      "\n",
+      "Major Iteration Log\n",
+      "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
+      "    0     0     2     2 4.0345e-01           I 0.0e+00 2.8e-01 (F_X)\n",
+      "    1     1     3     3 5.7862e-04  1.0e+00 SO 0.0e+00 3.4e-04 (F_X)\n",
+      "    2     1     4     4 1.8977e-09  1.0e+00 SO 0.0e+00 1.2e-09 (F_X)\n",
+      "\n",
+      "Major Iterations. . . . 2\n",
+      "Minor Iterations. . . . 2\n",
+      "Restarts. . . . . . . . 0\n",
+      "Crash Iterations. . . . 1\n",
+      "Gradient Steps. . . . . 0\n",
+      "Function Evaluations. . 4\n",
+      "Gradient Evaluations. . 4\n",
+      "Basis Time. . . . . . . 0.000000\n",
+      "Total Time. . . . . . . 0.015000\n",
+      "Residual. . . . . . . . 1.897711e-09\n",
+      "Postsolved residual: 1.8977e-09\n"
      ]
     },
     {
@@ -242,7 +316,7 @@
        "\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n",
        "\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n",
        "\\quad && \\perp \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n",
-       "\\quad && \\perp \\quad && 1.0 <PX1.0 < \\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
+       "\\quad && \\perp \\quad && PX = 1.0\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
        "\\quad && \\perp \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n",
        "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter_{1}))\n",
        "\\quad && \\perp \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))\n",
@@ -261,7 +335,7 @@
        "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                       ┴  0.0 < X\n",
        "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                        ┴  0.0 < Y\n",
        "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                       ┴  0.0 < U\n",
-       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  1.0 < PX1.0 < \n",
+       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  PX = 1.0\n",
        "  (+(PYPU * U) + 0.0) - 50.0 * Y                                             ┴  0.001 < PY\n",
        "  (0.0 + +(RA / PU)) - 150.0 * U                                             ┴  0.001 < PU\n",
        "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter[1]))             ┴  0.001 < PL\n",
