Update example2 to macro API

--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -38,25 +38,25 @@
    "source": [
     "m = Model()\n",
     "\n",
-    "endow = add!(m, Parameter(:endow, 1.))\n",
+    "@parameter(m, endow, 1.0)\n",
     "\n",
-    "add!(m, Sector(:X))\n",
-    "add!(m, Sector(:Y))\n",
-    "add!(m, Sector(:U))\n",
+    "@sector(m, X)\n",
+    "@sector(m, Y)\n",
+    "@sector(m, U)\n",
     "\n",
-    "add!(m, Commodity(:PX))\n",
-    "add!(m, Commodity(:PY))\n",
-    "add!(m, Commodity(:PU))\n",
-    "add!(m, Commodity(:PL))\n",
-    "add!(m, Commodity(:PK))\n",
+    "@commodity(m, PX)\n",
+    "@commodity(m, PY)\n",
+    "@commodity(m, PU)\n",
+    "@commodity(m, PL)\n",
+    "@commodity(m, PK)\n",
     "\n",
-    "add!(m, Consumer(:RA, benchmark=150.))\n",
+    "@consumer(m, RA, benchmark=150.)\n",
     "\n",
-    "add!(m, Production(:X, 1, :PX, 100, [Input(:PL, 50), Input(:PK, 50)]))\n",
-    "add!(m, Production(:Y, 1, :PY, 50, [Input(:PL, 20), Input(:PK, 30)]))\n",
-    "add!(m, Production(:U, 1, :PU, 150, [Input(:PX, 100), Input(:PY, 50)]))\n",
+    "@production(m, X, 1, PX, 100, [Input(PL, 50), Input(PK, 50)])\n",
+    "@production(m, Y, 1, PY, 50, [Input(PL, 20), Input(PK, 30)])\n",
+    "@production(m, U, 1, PU, 150, [Input(PX, 100), Input(PY, 50)])\n",
     "\n",
-    "add!(m, Demand(:RA, :PU, [Endowment(:PL, :(70 * $endow)), Endowment(:PK, 80.)]))"
+    "@demand(m, RA, PU, [Endowment(PL, :(70 * $endow)), Endowment(PK, 80.)])"
    ]
   },
   {
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_83DB.tmp\n",
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_D458.tmp\n",
       " > cumulative_iteration_limit 0\n",
       "Read of options file complete.\n",
       "\n",
@@ -161,7 +161,7 @@
       "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
       "    0     0     2     2 6.0442e-01           I 0.0e+00 4.1e-01 (F_PU)\n",
       "    1     1     3     3 3.7495e-04  1.0e+00 SO 0.0e+00 3.0e-04 (F_PK)\n",
-      "    2     1     4     4 1.9274e-08  1.0e+00 SO 0.0e+00 1.3e-08 (F_PLPX)\n",
+      "    2     1     4     4 1.9273e-08  1.0e+00 SO 0.0e+00 1.3e-08 (F_PLPX)\n",
       "\n",
       "Major Iterations. . . . 2\n",
       "Minor Iterations. . . . 2\n",
@@ -171,8 +171,8 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.000000\n",
-      "Residual. . . . . . . . 1.927418e-08\n"
+      "Total Time. . . . . . . 0.016000\n",
+      "Residual. . . . . . . . 1.927298e-08\n"
      ]
     },
     {
@@ -183,21 +183,21 @@
        "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
        "  Consumers: RA (bm=150.0)\n",
        "Solution:\n",
-       "  X:\t1.0488088481734958\n",
-       "  Y:\t1.03886011825708\n",
-       "  U:\t1.0454820635822561\n",
-       "  PX:\t1.0488566170769114\n",
-       "  PY:\t1.0589010793419213\n",
-       "  PU:\t1.0521941397098173\n",
-       "  PL:\t1.0000455456233646\n",
-       "  PK:\t1.1000501007115724\n",
-       "  PLPX:\t52.44044240818329\n",
-       "  PKPX:\t47.67312946227611\n",
-       "  PLPY:\t21.17705705826264\n",
-       "  PKPY:\t28.877805079697787\n",
-       "  PXPU:\t100.31820580255854\n",
-       "  PYPU:\t49.68330660298154\n",
-       "  RA:\t165.00751506992486\n"
+       "  X:\t1.048808848173496\n",
+       "  Y:\t1.038860118257079\n",
+       "  U:\t1.0454820635822557\n",
+       "  PX:\t1.048856610774173\n",
+       "  PY:\t1.0589010729788217\n",
+       "  PU:\t1.0521941333870226\n",
+       "  PL:\t1.000045539613954\n",
+       "  PK:\t1.1000500941011886\n",
+       "  PLPX:\t52.44044240818331\n",
+       "  PKPX:\t47.67312946227609\n",
+       "  PLPY:\t21.177057058262655\n",
+       "  PKPY:\t28.877805079697776\n",
+       "  PXPU:\t100.31820580255861\n",
+       "  PYPU:\t49.68330660298151\n",
+       "  RA:\t165.00751407836955\n"
       ]
      },
      "execution_count": 4,
@@ -250,8 +250,8 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.015000\n",
-      "Residual. . . . . . . . 1.897711e-09\n",
+      "Total Time. . . . . . . 0.016000\n",
+      "Residual. . . . . . . . 1.897732e-09\n",
       "Postsolved residual: 1.8977e-09\n"
      ]
     },
@@ -263,20 +263,20 @@
        "  Commodities: PX (bm=1.0), PY (bm=1.0), PU (bm=1.0), PL (bm=1.0), PK (bm=1.0)\n",
        "  Consumers: RA (bm=150.0)\n",
        "Solution:\n",
-       "  X:\t1.0488088481874933\n",
+       "  X:\t1.0488088481874944\n",
        "  Y:\t1.0388601182572055\n",
-       "  U:\t1.0454820635823239\n",
+       "  U:\t1.0454820635823234\n",
        "  PX:\t1.0\n",
-       "  PY:\t1.0095765827762653\n",
+       "  PY:\t1.0095765827762646\n",
        "  PU:\t1.0031820580255566\n",
-       "  PL:\t0.953462589239053\n",
-       "  PK:\t1.0488088481827003\n",
-       "  PLPX:\t52.44044240795571\n",
-       "  PKPX:\t47.6731294613633\n",
-       "  PLPY:\t21.177057058092682\n",
-       "  PKPY:\t28.87780507930972\n",
-       "  PXPU:\t100.31820580255416\n",
-       "  PYPU:\t49.68330660298509\n",
+       "  PL:\t0.9534625892390528\n",
+       "  PK:\t1.0488088481827005\n",
+       "  PLPX:\t52.4404424079557\n",
+       "  PKPX:\t47.673129461363295\n",
+       "  PLPY:\t21.17705705809265\n",
+       "  PKPY:\t28.87780507930971\n",
+       "  PXPU:\t100.31820580255413\n",
+       "  PYPU:\t49.68330660298511\n",
        "  RA:\t157.3213272260231\n"
       ]
      },
@@ -306,12 +306,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{alignat*}{3}\\\n",
-       "& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PL - PLPX\n",
-       "\\quad && \\perp \\quad && PLPX\\\\& (50.0 * (PL ^ {0.5} * PK ^ {0.5})) / PK - PKPX\n",
-       "\\quad && \\perp \\quad && PKPX\\\\& (20.0 * (PL ^ {0.4} * PK ^ {0.6})) / PL - PLPY\n",
-       "\\quad && \\perp \\quad && PLPY\\\\& (30.0 * (PL ^ {0.4} * PK ^ {0.6})) / PK - PKPY\n",
-       "\\quad && \\perp \\quad && PKPY\\\\& (100.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PX - PXPU\n",
-       "\\quad && \\perp \\quad && PXPU\\\\& (50.0 * (PX ^ {0.6666666666666666} * PY ^ {0.3333333333333333})) / PY - PYPU\n",
+       "& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PL - PLPX\n",
+       "\\quad && \\perp \\quad && PLPX\\\\& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PK - PKPX\n",
+       "\\quad && \\perp \\quad && PKPX\\\\& (20.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PL - PLPY\n",
+       "\\quad && \\perp \\quad && PLPY\\\\& (30.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PK - PKPY\n",
+       "\\quad && \\perp \\quad && PKPY\\\\& (100.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PX - PXPU\n",
+       "\\quad && \\perp \\quad && PXPU\\\\& (50.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PY - PYPU\n",
        "\\quad && \\perp \\quad && PYPU\\\\& (PL * PLPX + PK * PKPX) - 100.0 * PX\n",
        "\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n",
        "\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n",
@@ -326,21 +326,21 @@
       ],
       "text/plain": [
        "Mixed complementarity problem with 15 constraints:\n",
-       "  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PL - PLPX                                 ┴  PLPX\n",
-       "  (50.0 * (PL ^ 0.5 * PK ^ 0.5)) / PK - PKPX                                 ┴  PKPX\n",
-       "  (20.0 * (PL ^ 0.4 * PK ^ 0.6)) / PL - PLPY                                 ┴  PLPY\n",
-       "  (30.0 * (PL ^ 0.4 * PK ^ 0.6)) / PK - PKPY                                 ┴  PKPY\n",
-       "  (100.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PX - PXPU  ┴  PXPU\n",
-       "  (50.0 * (PX ^ 0.6666666666666666 * PY ^ 0.3333333333333333)) / PY - PYPU   ┴  PYPU\n",
-       "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                       ┴  0.0 < X\n",
-       "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                        ┴  0.0 < Y\n",
-       "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                       ┴  0.0 < U\n",
-       "  (+(PXPU * U) + 0.0) - 100.0 * X                                            ┴  PX = 1.0\n",
-       "  (+(PYPU * U) + 0.0) - 50.0 * Y                                             ┴  0.001 < PY\n",
-       "  (0.0 + +(RA / PU)) - 150.0 * U                                             ┴  0.001 < PU\n",
-       "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter[1]))             ┴  0.001 < PL\n",
-       "  ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))                            ┴  0.001 < PK\n",
-       "  ((70.0 * parameter[1]) * PL + 80.0 * PK) - RA                              ┴  RA\n"
+       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PL - PLPX    ┴  PLPX\n",
+       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PK - PKPX    ┴  PKPX\n",
+       "  (20.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PL - PLPY      ┴  PLPY\n",
+       "  (30.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PK - PKPY      ┴  PKPY\n",
+       "  (100.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PX - PXPU  ┴  PXPU\n",
+       "  (50.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PY - PYPU   ┴  PYPU\n",
+       "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                ┴  0.0 < X\n",
+       "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                 ┴  0.0 < Y\n",
+       "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                ┴  0.0 < U\n",
+       "  (+(PXPU * U) + 0.0) - 100.0 * X                                     ┴  PX = 1.0\n",
+       "  (+(PYPU * U) + 0.0) - 50.0 * Y                                      ┴  0.001 < PY\n",
+       "  (0.0 + +(RA / PU)) - 150.0 * U                                      ┴  0.001 < PU\n",
+       "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter[1]))      ┴  0.001 < PL\n",
+       "  ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))                     ┴  0.001 < PK\n",
+       "  ((70.0 * parameter[1]) * PL + 80.0 * PK) - RA                       ┴  RA\n"
       ]
      },
      "execution_count": 6,
