Register parameters in JuMP model

--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_D458.tmp\n",
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_F2EB.tmp\n",
       " > cumulative_iteration_limit 0\n",
       "Read of options file complete.\n",
       "\n",
@@ -171,7 +171,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.016000\n",
+      "Total Time. . . . . . . 0.000000\n",
       "Residual. . . . . . . . 1.927298e-08\n"
      ]
     },
@@ -250,7 +250,7 @@
       "Function Evaluations. . 4\n",
       "Gradient Evaluations. . 4\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.016000\n",
+      "Total Time. . . . . . . 0.000000\n",
       "Residual. . . . . . . . 1.897732e-09\n",
       "Postsolved residual: 1.8977e-09\n"
      ]
@@ -318,9 +318,9 @@
        "\\quad && \\perp \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n",
        "\\quad && \\perp \\quad && PX = 1.0\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
        "\\quad && \\perp \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n",
-       "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter_{1}))\n",
+       "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * endow))\n",
        "\\quad && \\perp \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))\n",
-       "\\quad && \\perp \\quad && 0.001 <PK\\\\& ((70.0 * parameter_{1}) * PL + 80.0 * PK) - RA\n",
+       "\\quad && \\perp \\quad && 0.001 <PK\\\\& ((70.0 * endow) * PL + 80.0 * PK) - RA\n",
        "\\quad && \\perp \\quad && RA\\\\\\end{alignat*}\n",
        " $$\n"
       ],
@@ -338,9 +338,9 @@
        "  (+(PXPU * U) + 0.0) - 100.0 * X                                     ┴  PX = 1.0\n",
        "  (+(PYPU * U) + 0.0) - 50.0 * Y                                      ┴  0.001 < PY\n",
        "  (0.0 + +(RA / PU)) - 150.0 * U                                      ┴  0.001 < PU\n",
-       "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * parameter[1]))      ┴  0.001 < PL\n",
+       "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * endow))             ┴  0.001 < PL\n",
        "  ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))                     ┴  0.001 < PK\n",
-       "  ((70.0 * parameter[1]) * PL + 80.0 * PK) - RA                       ┴  RA\n"
+       "  ((70.0 * endow) * PL + 80.0 * PK) - RA                              ┴  RA\n"
       ]
      },
      "execution_count": 6,
@@ -355,15 +355,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia 1.6.0",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.0"
   },
   "nteract": {
    "version": "0.28.0"
