--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_F2EB.tmp\n",
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_16C0.tmp\n",
       " > cumulative_iteration_limit 0\n",
       "Read of options file complete.\n",
       "\n",
@@ -94,7 +94,7 @@
       "Function Evaluations. . 1\n",
       "Gradient Evaluations. . 1\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.047000\n",
+      "Total Time. . . . . . . 0.079000\n",
       "Residual. . . . . . . . 0.000000e+00\n"
      ]
     },
