--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -52,11 +52,11 @@
     "\n",
     "@consumer(m, RA, benchmark=150.)\n",
     "\n",
-    "@production(m, X, 1, PX, 100, [Input(PL, 50), Input(PK, 50)])\n",
-    "@production(m, Y, 1, PY, 50, [Input(PL, 20), Input(PK, 30)])\n",
-    "@production(m, U, 1, PU, 150, [Input(PX, 100), Input(PY, 50)])\n",
+    "@production(m, X, 1, [Output(PX, 100)], [Input(PL, 50), Input(PK, 50)])\n",
+    "@production(m, Y, 1, [Output(PY, 50)], [Input(PL, 20), Input(PK, 30)])\n",
+    "@production(m, U, 1, [Output(PU, 150)], [Input(PX, 100), Input(PY, 50)])\n",
     "\n",
-    "@demand(m, RA, PU, [Endowment(PL, :(70 * $endow)), Endowment(PK, 80.)])"
+    "@demand(m, RA, [Demand(PU, 1)], [Endowment(PL, :(70 * $endow)), Endowment(PK, 80.)])"
    ]
   },
   {
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_16C0.tmp\n",
+      "Reading options file C:\\Users\\david\\AppData\\Local\\Temp\\jl_8C6C.tmp\n",
       " > cumulative_iteration_limit 0\n",
       "Read of options file complete.\n",
       "\n",
@@ -94,7 +94,7 @@
       "Function Evaluations. . 1\n",
       "Gradient Evaluations. . 1\n",
       "Basis Time. . . . . . . 0.000000\n",
-      "Total Time. . . . . . . 0.079000\n",
+      "Total Time. . . . . . . 0.062000\n",
       "Residual. . . . . . . . 0.000000e+00\n"
      ]
     },
@@ -114,12 +114,12 @@
        "  PU:\t1.0\n",
        "  PL:\t1.0\n",
        "  PK:\t1.0\n",
-       "  PLPX:\t50.0\n",
-       "  PKPX:\t50.0\n",
-       "  PLPY:\t20.0\n",
-       "  PKPY:\t30.0\n",
-       "  PXPU:\t100.0\n",
-       "  PYPU:\t50.0\n",
+       "  ‡PL†X:\t50.0\n",
+       "  ‡PK†X:\t50.0\n",
+       "  ‡PL†Y:\t20.0\n",
+       "  ‡PK†Y:\t30.0\n",
+       "  ‡PX†U:\t100.0\n",
+       "  ‡PY†U:\t50.0\n",
        "  RA:\t150.0\n"
       ]
      },
@@ -161,7 +161,7 @@
       "major minor  func  grad  residual    step  type prox    inorm  (label)\n",
       "    0     0     2     2 6.0442e-01           I 0.0e+00 4.1e-01 (F_PU)\n",
       "    1     1     3     3 3.7495e-04  1.0e+00 SO 0.0e+00 3.0e-04 (F_PK)\n",
-      "    2     1     4     4 1.9273e-08  1.0e+00 SO 0.0e+00 1.3e-08 (F_PLPX)\n",
+      "    2     1     4     4 1.9273e-08  1.0e+00 SO 0.0e+00 1.3e-08 (F_‡PL†X)\n",
       "\n",
       "Major Iterations. . . . 2\n",
       "Minor Iterations. . . . 2\n",
@@ -191,12 +191,12 @@
        "  PU:\t1.0521941333870226\n",
        "  PL:\t1.000045539613954\n",
        "  PK:\t1.1000500941011886\n",
-       "  PLPX:\t52.44044240818331\n",
-       "  PKPX:\t47.67312946227609\n",
-       "  PLPY:\t21.177057058262655\n",
-       "  PKPY:\t28.877805079697776\n",
-       "  PXPU:\t100.31820580255861\n",
-       "  PYPU:\t49.68330660298151\n",
+       "  ‡PL†X:\t52.44044240818331\n",
+       "  ‡PK†X:\t47.67312946227609\n",
+       "  ‡PL†Y:\t21.177057058262655\n",
+       "  ‡PK†Y:\t28.877805079697776\n",
+       "  ‡PX†U:\t100.31820580255861\n",
+       "  ‡PY†U:\t49.68330660298151\n",
        "  RA:\t165.00751407836955\n"
       ]
      },
@@ -271,12 +271,12 @@
        "  PU:\t1.0031820580255566\n",
        "  PL:\t0.9534625892390528\n",
        "  PK:\t1.0488088481827005\n",
-       "  PLPX:\t52.4404424079557\n",
-       "  PKPX:\t47.673129461363295\n",
-       "  PLPY:\t21.17705705809265\n",
-       "  PKPY:\t28.87780507930971\n",
-       "  PXPU:\t100.31820580255413\n",
-       "  PYPU:\t49.68330660298511\n",
+       "  ‡PL†X:\t52.4404424079557\n",
+       "  ‡PK†X:\t47.673129461363295\n",
+       "  ‡PL†Y:\t21.17705705809265\n",
+       "  ‡PK†Y:\t28.87780507930971\n",
+       "  ‡PX†U:\t100.31820580255413\n",
+       "  ‡PY†U:\t49.68330660298511\n",
        "  RA:\t157.3213272260231\n"
       ]
      },
@@ -306,41 +306,41 @@
      "data": {
       "text/latex": [
        "$$ \\begin{alignat*}{3}\\\n",
-       "& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PL - PLPX\n",
-       "\\quad && \\perp \\quad && PLPX\\\\& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PK - PKPX\n",
-       "\\quad && \\perp \\quad && PKPX\\\\& (20.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PL - PLPY\n",
-       "\\quad && \\perp \\quad && PLPY\\\\& (30.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PK - PKPY\n",
-       "\\quad && \\perp \\quad && PKPY\\\\& (100.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PX - PXPU\n",
-       "\\quad && \\perp \\quad && PXPU\\\\& (50.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PY - PYPU\n",
-       "\\quad && \\perp \\quad && PYPU\\\\& (PL * PLPX + PK * PKPX) - 100.0 * PX\n",
-       "\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * PLPY + PK * PKPY) - 50.0 * PY\n",
-       "\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * PXPU + PY * PYPU) - 150.0 * PU\n",
-       "\\quad && \\perp \\quad && 0.0 <U\\\\& (+(PXPU * U) + 0.0) - 100.0 * X\n",
-       "\\quad && \\perp \\quad && PX = 1.0\\\\& (+(PYPU * U) + 0.0) - 50.0 * Y\n",
+       "& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PL - ‡PL†X\n",
+       "\\quad && \\perp \\quad && ‡PL†X\\\\& (50.0 * (PL ^ {50.0 / 100.0} * PK ^ {50.0 / 100.0})) / PK - ‡PK†X\n",
+       "\\quad && \\perp \\quad && ‡PK†X\\\\& (20.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PL - ‡PL†Y\n",
+       "\\quad && \\perp \\quad && ‡PL†Y\\\\& (30.0 * (PL ^ {20.0 / 50.0} * PK ^ {30.0 / 50.0})) / PK - ‡PK†Y\n",
+       "\\quad && \\perp \\quad && ‡PK†Y\\\\& (100.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PX - ‡PX†U\n",
+       "\\quad && \\perp \\quad && ‡PX†U\\\\& (50.0 * (PX ^ {100.0 / 150.0} * PY ^ {50.0 / 150.0})) / PY - ‡PY†U\n",
+       "\\quad && \\perp \\quad && ‡PY†U\\\\& (PL * ‡PL†X + PK * ‡PK†X) - 100.0 * PX\n",
+       "\\quad && \\perp \\quad && 0.0 <X\\\\& (PL * ‡PL†Y + PK * ‡PK†Y) - 50.0 * PY\n",
+       "\\quad && \\perp \\quad && 0.0 <Y\\\\& (PX * ‡PX†U + PY * ‡PY†U) - 150.0 * PU\n",
+       "\\quad && \\perp \\quad && 0.0 <U\\\\& (+(‡PX†U * U) + 0.0) - 100.0 * X\n",
+       "\\quad && \\perp \\quad && PX = 1.0\\\\& (+(‡PY†U * U) + 0.0) - 50.0 * Y\n",
        "\\quad && \\perp \\quad && 0.001 <PY\\\\& (0.0 + +(RA / PU)) - 150.0 * U\n",
-       "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * endow))\n",
-       "\\quad && \\perp \\quad && 0.001 <PL\\\\& ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))\n",
+       "\\quad && \\perp \\quad && 0.001 <PU\\\\& ((‡PL†X * X + ‡PL†Y * Y) + 0.0) - +((0.0 + 70.0 * endow))\n",
+       "\\quad && \\perp \\quad && 0.001 <PL\\\\& ((‡PK†X * X + ‡PK†Y * Y) + 0.0) - +((0.0 + 80.0))\n",
        "\\quad && \\perp \\quad && 0.001 <PK\\\\& ((70.0 * endow) * PL + 80.0 * PK) - RA\n",
        "\\quad && \\perp \\quad && RA\\\\\\end{alignat*}\n",
        " $$\n"
       ],
       "text/plain": [
        "Mixed complementarity problem with 15 constraints:\n",
-       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PL - PLPX    ┴  PLPX\n",
-       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PK - PKPX    ┴  PKPX\n",
-       "  (20.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PL - PLPY      ┴  PLPY\n",
-       "  (30.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PK - PKPY      ┴  PKPY\n",
-       "  (100.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PX - PXPU  ┴  PXPU\n",
-       "  (50.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PY - PYPU   ┴  PYPU\n",
-       "  (PL * PLPX + PK * PKPX) - 100.0 * PX                                ┴  0.0 < X\n",
-       "  (PL * PLPY + PK * PKPY) - 50.0 * PY                                 ┴  0.0 < Y\n",
-       "  (PX * PXPU + PY * PYPU) - 150.0 * PU                                ┴  0.0 < U\n",
-       "  (+(PXPU * U) + 0.0) - 100.0 * X                                     ┴  PX = 1.0\n",
-       "  (+(PYPU * U) + 0.0) - 50.0 * Y                                      ┴  0.001 < PY\n",
-       "  (0.0 + +(RA / PU)) - 150.0 * U                                      ┴  0.001 < PU\n",
-       "  ((PLPX * X + PLPY * Y) + 0.0) - +((0.0 + 70.0 * endow))             ┴  0.001 < PL\n",
-       "  ((PKPX * X + PKPY * Y) + 0.0) - +((0.0 + 80.0))                     ┴  0.001 < PK\n",
-       "  ((70.0 * endow) * PL + 80.0 * PK) - RA                              ┴  RA\n"
+       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PL - ‡PL†X    ┴  ‡PL†X\n",
+       "  (50.0 * (PL ^ (50.0 / 100.0) * PK ^ (50.0 / 100.0))) / PK - ‡PK†X    ┴  ‡PK†X\n",
+       "  (20.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PL - ‡PL†Y      ┴  ‡PL†Y\n",
+       "  (30.0 * (PL ^ (20.0 / 50.0) * PK ^ (30.0 / 50.0))) / PK - ‡PK†Y      ┴  ‡PK†Y\n",
+       "  (100.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PX - ‡PX†U  ┴  ‡PX†U\n",
+       "  (50.0 * (PX ^ (100.0 / 150.0) * PY ^ (50.0 / 150.0))) / PY - ‡PY†U   ┴  ‡PY†U\n",
+       "  (PL * ‡PL†X + PK * ‡PK†X) - 100.0 * PX                               ┴  0.0 < X\n",
+       "  (PL * ‡PL†Y + PK * ‡PK†Y) - 50.0 * PY                                ┴  0.0 < Y\n",
+       "  (PX * ‡PX†U + PY * ‡PY†U) - 150.0 * PU                               ┴  0.0 < U\n",
+       "  (+(‡PX†U * U) + 0.0) - 100.0 * X                                     ┴  PX = 1.0\n",
+       "  (+(‡PY†U * U) + 0.0) - 50.0 * Y                                      ┴  0.001 < PY\n",
+       "  (0.0 + +(RA / PU)) - 150.0 * U                                       ┴  0.001 < PU\n",
+       "  ((‡PL†X * X + ‡PL†Y * Y) + 0.0) - +((0.0 + 70.0 * endow))            ┴  0.001 < PL\n",
+       "  ((‡PK†X * X + ‡PK†Y * Y) + 0.0) - +((0.0 + 80.0))                    ┴  0.001 < PK\n",
+       "  ((70.0 * endow) * PL + 80.0 * PK) - RA                               ┴  RA\n"
       ]
      },
      "execution_count": 6,
